# webChat

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/backend/chat/: Dockerfile
docker/frontend/: Dockerfile
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/message/: page.tsx
frontend/src/app/recovery/: page.tsx
frontend/src/app/registration/: page.tsx
frontend/src/app/rename/: page.tsx
frontend/src/components/: Comment.tsx  MessageForm.tsx  MessageFrame.tsx  RenameForm.tsx  RevoveryForm.tsx  SignIn.tsx  SignUp.tsx
frontend/src/functions/: delete.ts  encrypt_decrypt.ts
