[build-system]
requires = ["setuptools", "setuptools-scm", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "Web-Chat"
description = "Web Chat"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
include = ["chatAPI*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }